--- a/src/server_manager/ui_components/outline-manual-server-entry.html
+++ b/src/server_manager/ui_components/outline-manual-server-entry.html
@@ -173,7 +173,7 @@
                   <li>Name your rule 'Outline'.</li>
                   <li>Set target tags to 'Outline'.</li>
                   <li>Set source IP range to '0.0.0.0/0'.</li>
-                  <li>Set Protocols and ports to 'Allow all.</li>
+                  <li>Set Protocols and ports to 'Allow all'.</li>
                 </ol>
               </outline-cloud-instructions-view>
             </div>
