--- a/src/server_manager/ui_components/outline-cloud-instructions-view.html
+++ b/src/server_manager/ui_components/outline-cloud-instructions-view.html
@@ -53,13 +53,12 @@
         color: rgba(0,0,0,0.87);
       }
       .thumbnail {
-        width: 100%;
-        height: 264px;
+        width: 502px;
+        height: 298px;
         margin-bottom: 24px;
       }
       .overlay {
         position: absolute;
-        width: 502px;
         background: rgb(38,50,56);
         opacity: 0;
         display: flex;
@@ -105,7 +104,7 @@
         instructions: Array
       },
       _openImage: function() {
-        this.fire('OpenImageRequested', {imagePath: this.imagePath, windowTitle: this.title});
+        this.fire('OpenImageRequested', {imagePath: this.imagePath});
       }
     });
   </script>
