--- a/src/server_manager/ui_components/outline-intro-step.html
+++ b/src/server_manager/ui_components/outline-intro-step.html
@@ -25,7 +25,6 @@
     <style>
       :host {
         text-align: center;
-        --do-blue: #1637FF;
         --manual-server-green: #00BFA5;
         --aws-orange: #FF9900;
         --gcp-blue: #4285F4;
@@ -49,13 +48,45 @@
         text-align: left;
         color: rgba(0,0,0,0.87);
         font-weight: normal;
-        box-shadow: 0 0 2px 0 rgba(0,0,0,0.14), 0 2px 2px 0 rgba(0,0,0,0.12), 0 1px 3px 0 rgba(0,0,0,0.20);
         border-radius: 2px;
+        /* For shadows and hover/click colours. */
+        transition: 135ms;
       }
+
       .card#digital-ocean {
-        background-color: var(--do-blue);
-        color: rgba(255,255,255,0.87);
+        color: rgba(255, 255, 255, 0.87);
       }
+
+      /* Card shadows (common to all cards).` */
+      .card {
+        box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.02), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+      }
+      .card:hover {
+        box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.20), 0 4px 5px 0 rgba(0, 0, 0, 0.10), 0 1px 10px 0 rgba(0, 0, 0, 0.20);
+      }
+      .card:active {
+        box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.20), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+      }
+
+      /* DigitalOcean card background colours (gets brighter, inactive -> active). */
+      .card#digital-ocean {
+        background: rgba(22, 55, 255, 100);
+      }
+      .card#digital-ocean:hover {
+        background: rgba(22, 55, 255, 0.92);
+      }
+      .card#digital-ocean:active {
+        background: rgba(22, 55, 255, 0.84);
+      }
+
+      /* Non-DigitalOcean card background colours (get darker, inactive -> active). */
+      .card:hover {
+        background: rgba(38, 50, 56, 0.08);
+      }
+      .card:active {
+        background: rgba(38, 50, 56, 0.16);
+      }
+
       .card .card-header {
         display: flex;
         justify-content: space-between;
