--- a/src/server_manager/ui_components/outline-intro-step.html
+++ b/src/server_manager/ui_components/outline-intro-step.html
@@ -29,9 +29,6 @@
         --aws-orange: #FF9900;
         --gcp-blue: #4285F4;
       }
-      a {
-        cursor: pointer;
-      }
       .container {
         display: flex;
         flex-flow: row wrap;
@@ -51,6 +48,8 @@
         border-radius: 2px;
         /* For shadows and hover/click colours. */
         transition: 135ms;
+        /* Whole card is clickable. */
+        cursor: pointer;
       }
 
       .card#digital-ocean {
@@ -186,7 +185,7 @@
       <span slot="step-description">Don't have a server? Create an account<br/> with DigitalOcean.</span>
 
       <div class="container">
-        <div id="digital-ocean" class="card">
+        <div id="digital-ocean" class="card" on-tap="connectToDigitalOceanTapped">
           <div class="card-header">
             <div class="tag">RECOMMENDED</div>
             <img src="images/do_white_logo.svg">
@@ -207,7 +206,7 @@
           </div>
         </div>
 
-        <div id="gcp" class="card">
+        <div id="gcp" class="card" on-tap="setUpGcpTapped">
           <div class="card-header">
             <div class="tag">ADVANCED</div>
             <img src="images/gcp-logo.svg">
@@ -227,7 +226,7 @@
           </div>
         </div>
 
-        <div id="aws" class="card">
+        <div id="aws" class="card" on-tap="setUpAwsTapped">
           <div class="card-header">
             <div class="tag">ADVANCED</div>
             <img src="images/aws-logo.svg">
@@ -247,7 +246,7 @@
           </div>
         </div>
 
-        <div id="manual-server" class="card">
+        <div id="manual-server" class="card" on-tap="setUpGenericCloudProviderTapped">
           <div class="card-header">
             <div class="tag">ADVANCED</div>
             <img src="images/cloud.svg">
