--- a/src/server_manager/ui_components/outline-cloud-instructions-view.html
+++ b/src/server_manager/ui_components/outline-cloud-instructions-view.html
@@ -33,17 +33,10 @@
         padding: 15px 24px;
         line-height: 30px;
       }
-      .example {
-        font-size: 14px;
-        font-weight: 500;
-        color: rgba(0,0,0,0.87);
-        letter-spacing: 0;
-        text-transform: uppercase;
-      }
-      .example:hover {
+      .showme:hover {
         cursor: pointer;
       }
-      .example iron-icon {
+      .showme iron-icon {
         width: 16px;
         height: 16px;
         margin-left: 8px;
@@ -83,7 +76,7 @@
     <div class="container">
       <div class="header">
         <div class="title">[[title]]</div>
-        <div class="example" on-tap="_openImage">Example<iron-icon icon="open-in-new"></iron-icon></div>
+        <div class="showme" on-tap="_openImage">Show me where<iron-icon icon="open-in-new"></iron-icon></div>
       </div>
       <div class="thumbnail overlay" on-tap="_openImage">
         <iron-icon icon="open-in-new"></iron-icon>
